hphp/test/slow/parser/php-reserved-name-string-1.php.expectf
Fatal error: Cannot use 'String' as class name as it is reserved in %s/hphp/test/slow/parser/php-reserved-name-string-1.php on line 6